--- a/scripts/gp_post_approx_paper/vsem_example.Rmd
+++ b/scripts/gp_post_approx_paper/vsem_example.Rmd
@@ -102,6 +102,10 @@ for(output_var in inv_prob$output_names) {
 ```{r}
 # Info on parameters. 
 inv_prob$par_info
+
+# Prior plots.
+prior_plots <- plot_prior_samp(inv_prob$par_prior)
+for(plt in prior_plots) plot(plt)
 ```
 
 ```{r}
@@ -163,16 +167,15 @@ samp_dt <- fread(file.path(output_dir, "mcmc_samp.csv"))
 
 # MCMC Plots: exact. 
 trace_plots_exact <- get_trace_plots(samp_dt, test_label="exact", param_types="par",
-                                     param_names=inv_prob$par_names, burn_in_start=burn_in_start)
+                                     param_names=inv_prob$par_names, itr_start=burn_in_start)
 hist_plots_exact <- get_hist_plot_comparisons(samp_dt, test_labels="exact", 
-                                              param_types="par", burn_in_start=burn_in_start)
+                                              param_types="par", itr_start=burn_in_start)
 corr_plots_exact <- get_mcmc_2d_density_plots(samp_dt, test_labels="exact", 
-                                              burn_in_start=burn_in_start)$exact
+                                              itr_start=burn_in_start)$exact
 
 for(plt in trace_plots_exact) plot(plt) 
 for(plt in hist_plots_exact) plot(plt)
 for(plt in corr_plots_exact) plot(plt)
-
 ```
 
 # Emulator Summary and Validation
@@ -252,7 +255,7 @@ for(i in random_idx) {
 ```{r}
 # Plot 1d projections: deterministic likelihood approximations. 
 
-approx_types <- c("mean", "marginal")
+approx_types <- c("mean") #, "marginal")
 
 for(em_name in names(llik_em_list)) {
   plts <- llik_em_list[[em_name]]$plot_1d_projection(input_list_proj=input_list_proj, 
